include_HEADERS=      BicycleDriveDrawing.hpp \
                      Camera.hpp \
                      DiffDriveDrawing.hpp \
                      Drawer.hpp \
                      Drawing.hpp \
                      GoalInstanceDrawing.hpp \
                      HoloDriveDrawing.hpp \
                      MapperUpdateDrawing.hpp \
                      OdometryDrawing.hpp \
                      RobotDrawing.hpp \
                      RobotZoomCamera.hpp \
                      ScannerDrawing.hpp \
                      SharpDrawing.hpp \
                      SimpleImage.hpp \
                      StillCamera.hpp \
                      TrajectoryDrawing.hpp \
                      TraversabilityDrawing.hpp \
                      View.hpp \
                      WorldCamera.hpp \
                      WorldDrawing.hpp \
                      wrap_gl.hpp \
                      wrap_glu.hpp \
                      wrap_glut.hpp

includedir=           @includedir@/npm/gfx
