noinst_LTLIBRARIES=  libbband.la
libbband_la_SOURCES= ReplanHandler.cpp BubbleBand.cpp Bubble.cpp \
                     BubbleFactory.cpp BubbleList.cpp
include_HEADERS=     BubbleBand.hpp ReplanHandler.hpp BubbleFactory.hpp \
                     BubbleList.hpp Bubble.hpp
includedir=          @includedir@/sfl/bband

CPPFLAGS+=          -I@top_builddir@/include
