# AM_CPPFLAGS= @SFL2_CPPFLAGS@
# AM_CFLAGS=   @SFL2_CFLAGS@
# AM_CXXFLAGS= @SFL2_CXXFLAGS@
# AM_LDFLAGS=  @SFL2_LDFLAGS@

noinst_LTLIBRARIES=  libbband.la
libbband_la_SOURCES= ReplanHandler.cpp BubbleBand.cpp Bubble.cpp \
                     BubbleFactory.cpp BubbleList.cpp
include_HEADERS=     BubbleBand.hpp ReplanHandler.hpp BubbleFactory.hpp \
                     BubbleList.hpp Bubble.hpp
includedir=          @includedir@/sfl/bband
