# AM_CPPFLAGS= @SFL2_CPPFLAGS@
# AM_CFLAGS=   @SFL2_CFLAGS@
# AM_CXXFLAGS= @SFL2_CXXFLAGS@
# AM_LDFLAGS=  @SFL2_LDFLAGS@

noinst_LTLIBRARIES= libexpo.la
libexpo_la_SOURCES= MotionPlannerState.cpp MotionPlanner.cpp \
                    MotionController.cpp expo_parameters.cpp \
                    Robox.cpp
include_HEADERS=    MotionPlanner.hpp MotionPlannerState.hpp \
                    MotionController.hpp expo_parameters.h \
                    Robox.hpp
includedir=         @includedir@/sfl/expo
