noinst_LTLIBRARIES= libutil.la
libutil_la_SOURCES= Point.cpp Ray.cpp Frame.cpp Line.cpp Pthread.cpp \
                    Hull.cpp numeric.cpp Polygon.cpp
include_HEADERS=    Point.hpp array2d.hpp functors.hpp Frame.hpp \
                    vec2d.hpp Pthread.hpp Ray.hpp Line.hpp pdebug.hpp \
                    Polygon.hpp Hull.hpp numeric.hpp
includedir=         @includedir@/sfl/util

###CPPFLAGS+=          -I@top_builddir@/include
